--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@ body{
    border: 1px solid #000;
    margin: 10% 10%; 
    background: #f0f8ff;
-   display: flex; 
-   flex-flow:column wrap;
+   /* overflow: hidden; */
+}
+.row1{ 
+   display: flex;
+   flex-wrap: wrap;      
 }
 .div{
    width: 200px;
@@ -19,7 +22,16 @@ body{
    text-align: center;
 }
 .div1{
- background: red;
+   display: flex;
+   flex-flow: column wrap;
+}
+.div-1-1{ 
+   height: 50%;
+   background: rgb(221, 136, 136);
+}
+.div-1-2{
+   height: 50%;
+   background: rgb(58, 55, 55);
 }
 .div2{
  background: black;
@@ -28,23 +40,87 @@ body{
  background: blue;
 }
 .div4{
- background: aqua ;
+ background: #874206 ;
+ flex-grow: 1;
+}
+.row2{
+   display: flex; 
+   column-gap: 20px;
 }
 .div5{
- background:violet;
+   display: flex; 
+   width: 50%;
+   height: 200px; 
+ column-gap: 10px;
+}
+.div-5-1{
+   width: 50%;
+   height: 200px;
+   background: #78e952;
+}
+.div-5-2{
+   width: 50%;
+   height: 200px;
+   background: #11af97;
+}
+.div-5-3{
+   width: 50%;
+   height: 200px;
+   background: rgb(200, 52, 220);
 }
 .div6{
- background: rgb(19, 182, 65);
+   width: 50%;
+   height: 200px; 
+   display: flex;
+   flex-direction: column;
+}
+.div-6-1{ 
+   width: 100%;
+   height: 200px;
+   background: #13b641; 
+}
+.div-6-2{ 
+   width: 100%;
+   height: 200px;
+   background: #111eaf;
+}
+.div-6-3{ 
+   width: 100%;
+   height: 200px;
+   background: #570808;
+} 
+.row3{
+   display: flex;
+   justify-content: space-evenly;
 }
 .div7{
- background: rgb(4, 255, 234);
+ background: #2b6964;
+
 }
 .div8{
  background: rgb(225, 0, 255);
+ 
 }
 .div9{
  background: rgb(46, 59, 20) ;
 }
-.div10{
- background:rgb(5, 64, 106);
+.div10{ 
+   height:200px; 
+   display: flex;
+   flex-direction: column;
 }
+.div-10-1{ 
+   width: 100%;
+   height: 200px;
+   background: #1380b6; 
+}
+.div-10-2{ 
+   width: 100%;
+   height: 200px;
+   background: #f8c804;
+}
+.div-10-3{ 
+   width: 100%;
+   height: 200px;
+   background: #024249;
+} 
